--- a/Your Vocabulary/Base.lproj/Main.storyboard
+++ b/Your Vocabulary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nqc-Ei-bCp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ifo-ul-Ec4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -64,7 +64,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bEv-jG-ZNZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="694" y="-156"/>
+            <point key="canvasLocation" x="1032.8" y="-156.07196401799101"/>
         </scene>
         <!--Words Table View Controller-->
         <scene sceneID="FYx-vp-aCE">
@@ -111,7 +111,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oG7-6j-JfZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1494" y="-156"/>
+            <point key="canvasLocation" x="1832.8" y="-156.07196401799101"/>
         </scene>
         <!--Word View Controller-->
         <scene sceneID="n0a-Ng-mml">
@@ -248,12 +248,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jv3-9X-0ft" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2220" y="-156"/>
+            <point key="canvasLocation" x="2559.1999999999998" y="-156.07196401799101"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Dictionaries-->
         <scene sceneID="J8d-Zz-6Hz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nqc-Ei-bCp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Dictionaries" image="dictionary_tb" selectedImage="selected_dictionary_tb" id="ph7-Be-G1M"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xt2-tp-GVk">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -268,7 +269,100 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mUG-7I-ufQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-40" y="-155.62218890554723"/>
+            <point key="canvasLocation" x="298.39999999999998" y="-156.07196401799101"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="kdl-lf-YXt">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="ifo-ul-Ec4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="dic-ta-2cg">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="barTintColor" red="0.59215686270000001" green="0.73725490199999999" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="1" green="0.83137254900000002" blue="0.45882352939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="nqc-Ei-bCp" kind="relationship" relationship="viewControllers" id="5rh-NA-tFf"/>
+                        <segue destination="Bsa-cZ-GR8" kind="relationship" relationship="viewControllers" id="jZu-Qo-bUO"/>
+                        <segue destination="hjm-37-WBF" kind="relationship" relationship="viewControllers" id="Z2P-6f-vWH"/>
+                        <segue destination="hKR-V7-2Fk" kind="relationship" relationship="viewControllers" id="N9E-EP-RCl"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dHk-XE-Gva" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2103" y="340"/>
+        </scene>
+        <!--Quizzes-->
+        <scene sceneID="Aaa-Hu-32U">
+            <objects>
+                <viewController id="Bsa-cZ-GR8" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="K4R-9G-Oo9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="tGT-J7-NrE"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Quizzes" image="quizzes_tb" selectedImage="selected_quizzes_tb" id="an2-3g-CI3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J2l-hK-2Jm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="297" y="543"/>
+        </scene>
+        <!--Statistic-->
+        <scene sceneID="rzX-vr-EF7">
+            <objects>
+                <viewController id="hjm-37-WBF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Phr-zT-RDY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="N2d-vu-Xvp"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Statistic" image="statistics_tb" selectedImage="selected_statistics_tb" id="WhO-Jv-PuN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n3Y-i7-W23" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="298" y="1313"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="j3r-97-Cch">
+            <objects>
+                <tableViewController id="hKR-V7-2Fk" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vMb-cM-Wt4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dFs-Vo-0bj">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dFs-Vo-0bj" id="65G-CK-xtR">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hKR-V7-2Fk" id="t4C-ic-cV9"/>
+                            <outlet property="delegate" destination="hKR-V7-2Fk" id="orz-UA-zYr"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Settings" image="settings_tb" selectedImage="selected_settings_tb" id="KLd-dK-Q8X"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4is-r0-M2H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="298" y="2075"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dictionary_tb" width="20" height="26"/>
+        <image name="quizzes_tb" width="17" height="26"/>
+        <image name="selected_dictionary_tb" width="20" height="26"/>
+        <image name="selected_quizzes_tb" width="17" height="26"/>
+        <image name="selected_settings_tb" width="26" height="26"/>
+        <image name="selected_statistics_tb" width="26" height="26"/>
+        <image name="settings_tb" width="26" height="26"/>
+        <image name="statistics_tb" width="26" height="26"/>
+    </resources>
 </document>
