--- a/Your Vocabulary/Base.lproj/Main.storyboard
+++ b/Your Vocabulary/Base.lproj/Main.storyboard
@@ -210,6 +210,9 @@
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2xR-xI-pkN">
                                                     <rect key="frame" x="176" y="10" width="22" height="22"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="addNewField:" destination="5LV-YE-bqT" eventType="touchUpInside" id="9qZ-eV-Rzf"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                         </tableViewCellContentView>
