--- a/Your Vocabulary/Views/Quizzes.storyboard
+++ b/Your Vocabulary/Views/Quizzes.storyboard
@@ -39,13 +39,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JWx-lX-U0b">
-                                            <rect key="frame" x="3" y="0.0" width="100" height="100"/>
+                                            <rect key="frame" x="5" y="5" width="96" height="96"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="JWx-lX-U0b" secondAttribute="height" multiplier="1:1" id="f1r-Ae-t8S"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xdq-av-kid">
-                                            <rect key="frame" x="13" y="102" width="79" height="20"/>
+                                            <rect key="frame" x="13" y="103" width="79" height="19"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -58,9 +58,9 @@
                                     <constraint firstItem="Xdq-av-kid" firstAttribute="leading" secondItem="YN8-Xl-6SQ" secondAttribute="leadingMargin" constant="5" id="8vM-LJ-ATd"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="Xdq-av-kid" secondAttribute="bottom" id="BAS-pg-m56"/>
                                     <constraint firstItem="JWx-lX-U0b" firstAttribute="width" secondItem="Xdq-av-kid" secondAttribute="height" multiplier="5:1" id="FZD-fd-Lz6"/>
+                                    <constraint firstItem="JWx-lX-U0b" firstAttribute="top" secondItem="YN8-Xl-6SQ" secondAttribute="top" constant="5" id="HGG-Va-gXd"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="Xdq-av-kid" secondAttribute="trailing" constant="5" id="Z9x-TY-5IV"/>
                                     <constraint firstItem="Xdq-av-kid" firstAttribute="top" secondItem="JWx-lX-U0b" secondAttribute="bottom" constant="2" id="e1B-E2-PyX"/>
-                                    <constraint firstItem="JWx-lX-U0b" firstAttribute="top" secondItem="YN8-Xl-6SQ" secondAttribute="top" id="nvm-pH-9lR"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="quizzThumbNail" destination="JWx-lX-U0b" id="hDW-Cc-qbQ"/>
@@ -148,7 +148,7 @@
                                 <color key="textColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="highlightedColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </label>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fm7-4g-cCi">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.20000000000000001" translatesAutoresizingMaskIntoConstraints="NO" id="fm7-4g-cCi">
                                 <rect key="frame" x="32" y="131" width="311" height="2"/>
                                 <color key="progressTintColor" red="0.16862745100000001" green="0.27058823529999998" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
@@ -179,9 +179,11 @@
                         <outletCollection property="answersButtons" destination="Tft-HU-9jO" collectionClass="NSMutableArray" id="0xu-xT-OHf"/>
                         <outletCollection property="answersButtons" destination="syP-1v-bTy" collectionClass="NSMutableArray" id="UND-Fw-uxq"/>
                         <outletCollection property="answersButtons" destination="XCa-Mb-Gkw" collectionClass="NSMutableArray" id="8up-55-L83"/>
+                        <segue destination="Elw-0b-WBh" kind="unwind" identifier="unwindFinishSeekingQuiz" unwindAction="finishQuizWithSegue:" id="fcH-y8-PDu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wM2-Ub-nx8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Elw-0b-WBh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="460" y="1314"/>
         </scene>
@@ -283,9 +285,11 @@
                         <outletCollection property="rightButtons" destination="jcO-kA-cQM" collectionClass="NSMutableArray" id="Ozx-zB-F2t"/>
                         <outletCollection property="rightButtons" destination="CIE-tR-bdw" collectionClass="NSMutableArray" id="Vhp-A8-ITR"/>
                         <outletCollection property="rightButtons" destination="VSu-We-0qx" collectionClass="NSMutableArray" id="lsb-ob-Ffd"/>
+                        <segue destination="J1i-Cz-75z" kind="unwind" identifier="" unwindAction="finishQuizWithSegue:" id="UiX-NS-NGd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cax-Ks-qPN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="J1i-Cz-75z" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1150" y="1314"/>
         </scene>
